# cogman

./: Makefile  README.md  claude  cogman_tools.py  main.py  prompt.md  requirements.txt
.claude/: RESUME.md
agents/: __init__.py  events.py  loop.py  providers.py
api/: server.py
commands/: __init__.py  dispatcher.py  registry.py
core/: command_registry.py  config.py  context_compressor.py  gateway.py  intent_parser.py  local_nlp.py  memory.py  monitor.py  orchestrator.py  pattern_engine.py  personality.py  pi_agent.py  plugin_engine.py  safety.py  session.py  skills.py  system_controller.py  tool_registry.py  voice.py
daemon/: cogman-gateway.service  cogman.service  install_daemon.sh  install_ollama.sh
gateway/: __init__.py  message.py  runner.py
learning/: __init__.py  compressor.py  evolver.py  learner.py
memory/: __init__.py  context.py  manager.py  session.py
services/: cogman-api.service  cogman-gateway.service
skills/: __init__.py  registry.py
speech/: __init__.py  hotword.py  listener.py  stt.py  tts.py
src/: Cargo.toml
src/cogman-core/: Cargo.toml
src/cogman-core/src/: main.rs
src/cogman-core/src/ctl/: mod.rs
src/cogman-core/src/init/: mod.rs
src/cogman-core/src/pkg/: db.rs  installer.rs  mod.rs  schema.rs
src/cogman-core/src/svc/: mod.rs  service.rs
src/cogman-planner/: Cargo.toml
src/cogman-planner/src/: main.rs
src/cogman-planner/src/graph/: mod.rs
src/cogman-planner/src/metadata/: mod.rs  schema.rs
src/cogman-planner/src/plan/: mod.rs
tests/: test_all_tools.py  test_autonomous.py  test_core.py  test_functions.py
(+31 files in other folders)
